--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.3",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
