--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "axios": "^1.6.5",
+    "countries-list": "^3.0.6",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
