--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.5",
     "countries-list": "^3.0.6",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
